--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: #f43543;
+    background-color: #D0A2F7;
 }
 
 .wrapper{
@@ -20,7 +20,7 @@ body{
 
 .container{
     width: 100%;
-    background-color: #f43543;
+    background-color: #D0A2F7;
     padding: 50px 40px;
     box-shadow: 0 20px 65px rgba(87, 11, 16, 0.5);
     position: relative;
@@ -39,7 +39,7 @@ body{
 }
 
 .container p{
-    color: #fdd848;
+    color: #F1EAFF;
     line-height: 2;
     font-size: 18px;
 }
@@ -58,6 +58,6 @@ body{
     border-radius: 5px;
     font-size: 18px;
     font-weight: 600;
-    color: #f43543;
+    color: #D0A2F7;
     cursor: pointer;
 }
